Adjusted RaceBoard.css to avoid overlapping of headers on small screens/mobile devices

--- a/java/com.sap.sailing.gwt.ui/RaceBoard.css
+++ b/java/com.sap.sailing.gwt.ui/RaceBoard.css
@@ -6,6 +6,13 @@
       height: 0;
       clear: both;
       visibility: hidden;
+      
+      RegattaRaceInformation-Header
+      RaceName-Label
+      RaceSeriesAndFleet-Label
+      
+      RegattaAndRaceTime-Header???
+      RegattaName-Anchor
 */
 
 
@@ -662,6 +669,33 @@ img.openColumn {
 .RegattaAndRaceTime-Header .RaceTime-Label {
 	font-size: 15px;
 	margin-top: 5px;
+}
+
+@media (max-width: 600px) {
+	.RegattaRaceInformation-Header {
+		left: 110px;
+	}
+	.RegattaRaceInformation-Header .RaceName-Label {
+		display: block;
+		font-size: 16px;
+		padding: 2px 0;
+	}
+	.RegattaRaceInformation-Header .RaceSeriesAndFleet-Label {
+		display: block;
+		margin-top: 5px;
+	}
+	.RegattaAndRaceTime-Header {
+		top: 11px;
+	}
+	.RegattaAndRaceTime-Header .RegattaName-Anchor {
+		width: 115px;
+    	overflow: hidden;
+    	text-overflow: ellipsis;
+    	display: inline-block;
+    	white-space: nowrap;
+    	padding: 2px 0 2px 20px;
+		background-position: 4px -1px;
+	}
 }
 
 .VideoPopup-Close-Button {
